<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DATN_PHANTOM</string>
    <!--    TODO:Fragment-->
    <!--    escaping-->
    <!--    & with &amp;-->
    <!--    > with &gt;-->
    <!--    < with &lt;-->
    <!--    " with &quot;, &ldquo; or &rdquo;-->
    <!--    ' with &apos;, &lsquo; or &rsquo;-->
    <!--    } with &#125;-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgotPassword">Forgot pasword</string>
    <string name="noHaveAccount">Don&lt;t have account? Sign Up</string>
    <string name="haveAccount">Already have an acount? Sign In</string>
    <string name="emailId">Email ID</string>
    <string name="passWord">PassWord</string>
    <string name="sign_in">Sign In</string>
    <string name="fullName">Full Name</string>
    <string name="passWord2">PassWord (8 Character) </string>
    <string name="confirmPassword">"PassWord (8 Character) "</string>
    <string name="dontWorry">Don&lt;t worry we just need your resgiterd email adress and it&lt;s done!</string>
    <string name="checkMail"> Check your inbox after click the button above.</string>
    <string name="resetPassword">Reset PassWord</string>
    <string name="goback">  &lt;&lt;&lt; Goback </string>
    <string name="recoveryEmail">Recovery email send successfully! Check your Inbox</string>

    <!--    <nav-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Not Sign In</string>
    <string name="nav_header_subtitle">Email Adress</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search_icon">Search</string>
    <string name="action_notification_icon">Notification</string>
    <string name="action_cart_icon">Cart</string>

    <string name="menu_order">My Order</string>
    <string name="menu_rewards">My Rewards</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_wishlist">My WishList</string>
    <string name="menu_account">My Account</string>
    <string name="menu_home">My Mail</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="deal_of_day">Deal of the Day!</string>
    <string name="view_all">View All</string>
    <string name="check_price">Check price after coupen redemption</string>
    <string name="redeem">Redeem</string>
    <string name="description">Descriptions</string>
    <string name="specifications">Specifications</string>
    <string name="other_detail">Other details</string>
    <string name="cart_continue">Continue</string>

    <string name="new_adress_or_add">Change or Add New Address</string>

    <string name="current_order_status">Your Current Order Status</string>
    <string name="out_delivery">Out For Delivery</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="sign_up">Sign Up</string>
    <string name="step_away">You are just few steps away from your cart</string>
    <string name="quanlity">Quantity</string>
    <string name="sl">Qty</string>
    <string name="vnd">$</string>
    <string name="rating">Rating</string>
    <string name="retry">Retry</string>
    <string name="add_wishlist">Added to wishlist success!!</string>
    <string name="loading">Loading...</string>
    <string name="removed_successfully">Removed successfully</string>

    <!--TODO:toast,validate-->
    <string-array name="vn_states">
        <item>	An Giang	</item>
        <item>	Bà rịa – Vũng tàu	</item>
        <item>	Bắc Giang	</item>
        <item>	Bắc Kạn	</item>
        <item>	Bạc Liêu	</item>
        <item>	Bắc Ninh	</item>
        <item>	Bến Tre	</item>
        <item>	Bình Định	</item>
        <item>	Bình Dương	</item>
        <item>	Bình Phước	</item>
        <item>	Bình Thuận	</item>
        <item>	Cà Mau	</item>
        <item>	Cần Thơ	</item>
        <item>	Cao Bằng 	</item>
        <item>	Đà Nẵng	</item>
        <item>	Đắk Lắk	</item>
        <item>	Đắk Nông	</item>
        <item>	Điện Biên	</item>
        <item>	Đồng Nai	</item>
        <item>	Đồng Tháp	</item>
        <item>	Gia Lai	</item>
        <item>	Hà Giang	</item>
        <item>	Hà Nam	</item>
        <item>	Hà Nội 	</item>
        <item>	Hà Tĩnh	</item>
        <item>	Hải Dương	</item>
        <item>	Hải Phòng	</item>
        <item>	Hậu Giang	</item>
        <item>	Hòa Bình	</item>
        <item>	Hưng Yên	</item>
        <item>	Khánh Hòa	</item>
        <item>	Kiên Giang	</item>
        <item>	Kon Tum	</item>
        <item>	Lai Châu	</item>
        <item>	Lâm Đồng	</item>
        <item>	Lạng Sơn	</item>
        <item>	Lào Cai	</item>
        <item>	Long An	</item>
        <item>	Nam Định	</item>
        <item>	Nghệ An	</item>
        <item>	Ninh Bình	</item>
        <item>	Ninh Thuận	</item>
        <item>	Phú Thọ	</item>
        <item>	Phú Yên	</item>
        <item>	Quảng Bình	</item>
        <item>	Quảng Nam	</item>
        <item>	Quảng Ngãi	</item>
        <item>	Quảng Ninh	</item>
        <item>	Quảng Trị	</item>
        <item>	Sóc Trăng	</item>
        <item>	Sơn La	</item>
        <item>	Tây Ninh	</item>
        <item>	Thái Bình	</item>
        <item>	Thái Nguyên	</item>
        <item>	Thanh Hóa	</item>
        <item>	Thừa Thiên Huế	</item>
        <item>	Tiền Giang	</item>
        <item>	Thành phố Hồ Chí Minh	</item>
        <item>	Trà Vinh	</item>
        <item>	Tuyên Quang	</item>
        <item>	Vĩnh Long	</item>
        <item>	Vĩnh Phúc	</item>
        <item>	Yên Bái	</item>
    </string-array>
    <string name="pincode_values">Please provide valid pincode!</string>
    <string name="phone_values">Please provide valid phone number!</string>
    <string name="flat_no">Flat No., Building Name*</string>
    <string name="area_street">Locality, Area or Street*</string>
    <string name="Wards">Wards</string>
    <string name="district">District</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Mobile number</string>
    <string name="alternate_mobile">Alternate Mobile No.(Optional)</string>
    <string name="save">Save</string>
    <string name="out_of_stock">Out of Stock!</string>
    <string name="sorry">Sorry ! Product does matches the coupen terms.</string>
    <string name="invalid">Invalid!</string>
    <string name="tap_icon">Tap the icon on the top rignt conner to select your coupen.</string>
    <string name="coupen">Coupen</string>
    <string name="coupen_validity">Coupen validity.</string>
    <string name="alreadly_used">Alreadly used</string>
    <string name="apply">Apply</string>
    <string name="apply_coupen">Make sure to apply the coupon in your cart.</string>
    <string name="remove_item">Remove item</string>
    <string name="coupon_applied">Coupons Applied</string>
    <string name="offers_applied">Offers Applied</string>
    <string name="change_address">Change or Add New Address</string>
    <string name="update">Update</string>
    <string name="change_photo">Change Photo</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pasword">Confirm New Password</string>
    <string name="enter_password">Please enter your password to change the Email address.</string>
    <string name="done">Done</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="image_notfound">Image not found!</string>
    <string name="search_product">Search for products</string>
    <string name="product_notfound">Product not found !</string>
    <string name="payment_menthod">Payment Method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="thank_you">Thank You</string>
    <string name="order_confirmed">Your order has been confirmed</string>
    <string name="order_confirm_message">You will shortly receive your order confirmation message and email</string>
    <string name="expected_delivery">Expected delivery between 4-6 days</string>
    <string name="total_amount">Total amount</string>
    <string name="shipping_detail">SHIPPING DETAILS</string>
    <string name="verify">Verify</string>
    <string name="wait_verify">Please wait, it can take upto 60-120s to receive the verification SMS.</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="verify_code">Verification code has been sent to the phone.</string>
    <string name="max_quantity">Max quantity</string>
    <string name="not_available">Sorry, Required amount of quantity is not available</string>

</resources>