<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order_orange"
            android:title="@string/menu_order" />

        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/ic_reward_red"
            android:title="@string/menu_rewards" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart_white"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_favorite_pink"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black"
            android:title="@string/menu_account" />
    </group>
    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_person_black"
                android:title="@string/menu_signout" />

        </menu>
    </item>
</menu>