<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UpdateInfoUserFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="50dp"
        android:elevation="2dp"
        android:src="@drawable/banner_slider"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:text="@string/change_photo"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <Button
        android:id="@+id/btn_remove_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:text="@string/remove"
        android:textAllCaps="false"
        android:textColor="@color/colorBtnRed"
        app:layout_constraintEnd_toEndOf="@+id/btn_change_photo"
        app:layout_constraintStart_toStartOf="@+id/btn_change_photo"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_photo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:hint="@string/full_name"
        app:met_floatingLabel="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_remove_photo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="14dp"
        android:hint="@string/emailId"
        app:met_floatingLabel="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_fullname" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBtnRed"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintVertical_bias="1"
         />

</androidx.constraintlayout.widget.ConstraintLayout>