<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ResetPassWordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_resetPass"
            android:layout_width="355dp"
            android:layout_height="43dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="100dp"
            android:background="@color/colorBtnRed"
            android:enabled="false"
            android:text="@string/resetPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="297dp"
            android:layout_height="36dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/emailId"
            android:theme="@style/redprogressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="228dp"
            android:layout_height="221dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="360dp"
            android:layout_height="26dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email">

            <ImageView
                android:id="@+id/img_iconmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_red" />

            <TextView
                android:id="@+id/tv_informail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/recoveryEmail"
                android:textColor="@color/green" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="16dp"
            android:text="@string/goback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_resetPass" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="249dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/dontWorry"
            android:textColor="@color/colorBtnRed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ProgressBar
            android:id="@+id/pb_resetPassword"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="77dp"
            android:layout_height="9dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:theme="@style/redprogressBar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>