<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnImg_back_arrow"
                android:layout_width="43dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="378dp"
            android:layout_height="104dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/foodytext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnImg_back_arrow"></ImageView>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="#ffff"
            android:hint="@string/emailId"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:met_floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/passWord"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            app:met_floatingLabel="normal"/>

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <ProgressBar
            android:id="@+id/pb_signIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="50dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="145dp"
            android:background="@color/colorBtnRed"
            android:enabled="false"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot"
            tools:layout_editor_absoluteX="4dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="95dp"
            android:layout_height="0dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="24dp"
            android:text="Or"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />

        <TextView
            android:id="@+id/tv_noAcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/noHaveAccount"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>